--- a/src/App.css
+++ b/src/App.css
@@ -381,6 +381,8 @@ ul {
     color: #FFF;
 }
 
+#about {}
+
 #features {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -517,7 +519,7 @@ ul {
         justify-content: space-around;
     }
 
-    .feature-item {
+    .feature-item  {
         margin-bottom: 20px;
     }
 
@@ -545,7 +547,6 @@ ul {
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-
     .landing-header__content,
     .cta__content {
         padding-left: 30px;
@@ -1763,9 +1764,13 @@ input[type=range]::-ms-thumb {
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    
+}
 
-@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {}
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    
+}
 
 /*==============================
 	Card
@@ -1799,7 +1804,7 @@ input[type=range]::-ms-thumb {
 
 .card__new-tag {
     padding: 2px 5px;
-    color: #fff;
+    color:#fff;
     font-weight: bold;
     position: absolute;
     top: 0;
@@ -2110,6 +2115,7 @@ input[type=range]::-ms-thumb {
     left: 100%;
     top: 0;
     background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: #ff5860;
 }
@@ -2339,6 +2345,7 @@ input[type=range]::-ms-thumb {
     margin-bottom: 10px;
     display: inline-block;
     background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: #ff5860;
 }
@@ -2530,6 +2537,7 @@ input[type=range]::-ms-thumb {
     top: 0;
     left: 15px;
     background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: #ff5860;
     font-size: 28px;
@@ -2849,7 +2857,7 @@ input[type=range]::-ms-thumb {
 
 .like-button:hover,
 .rating-button:hover {
-    color: #ff55a5 !important;
+    color: #ff55a5 !important; 
     border: 1px solid #ff55a5 !important;
 }
 
@@ -3262,6 +3270,7 @@ input[type=range]::-ms-thumb {
 
 .footer__social li.instagram a i:before {
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: #ff5860;
 }
@@ -3488,7 +3497,7 @@ input[type=range]::-ms-thumb {
 
 .plyr__progress__container {
     flex: 100% !important;
-    width: 100% !important;
+    width: 100% !important; 
 }
 
 .plyr__controls__item.plyr__time--duration.plyr__time {
@@ -3587,7 +3596,8 @@ input[type=range]::-ms-thumb {
     background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
 }
 
-.series-watch-container .plyr__video-wrapper {
+.series-watch-container .plyr__video-wrapper
+ {
     height: 500px;
 }
 
@@ -3618,14 +3628,15 @@ input[type=range]::-ms-thumb {
         margin-left: 10px;
         margin-right: 10px;
     }
-
+        
     .movie-watch-container .plyr__video-wrapper {
         height: 300px;
     }
 
-    .series-watch-container .plyr__video-wrapper {
-        height: 300px;
-    }
+    .series-watch-container .plyr__video-wrapper
+ {
+    height: 300px;
+}
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -3633,7 +3644,7 @@ input[type=range]::-ms-thumb {
         flex: 18%;
         max-width: 18%;
     }
-
+    
     .movie-watch-container .plyr__video-wrapper {
         height: 500px;
     }
@@ -3912,7 +3923,7 @@ input[type=range]::-ms-thumb {
     color: #FFF;
 }
 
-.ant-modal-header>* {
+.ant-modal-header > * {
     color: #FFF;
 }
 
@@ -4298,7 +4309,7 @@ input[type=range]::-ms-thumb {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0,0,0,0.3);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -4320,7 +4331,7 @@ input[type=range]::-ms-thumb {
     background-color: #2b2828;
 }
 
-.profile-info__item>* {
+.profile-info__item > * {
     color: #FFF;
 }
 
@@ -4393,7 +4404,7 @@ input[type=range]::-ms-thumb {
 
     .top-rating-sec .section-padding {
         padding-bottom: 50px;
-    }
+    } 
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -4404,7 +4415,7 @@ input[type=range]::-ms-thumb {
 
     .top-rating-sec .section-padding {
         padding-bottom: 40px;
-    }
+    } 
 
     .card-carousel-item .card__cover img {
         min-height: 440px;
