--- a/src/index.css
+++ b/src/index.css
@@ -60,13 +60,19 @@
 
 .zalo__btn {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: #0180c7;
 }
 
 .stripe__btn {
     width: 100%;
     background-color: #1A1F71;
+    margin-bottom: 20px;
+}
+
+.paypal__btn {
+    width: 100%;
+    background-color: #253B80;
 }
 
 /*Loading*/
