--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
 
 .momo__btn {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: #b0006d;
 }
 
@@ -72,7 +72,7 @@
 
 .paypal__btn {
     width: 100%;
-    background-color: #253B80;
+    background-color: grey;
 }
 
 /*Loading*/
