--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,13 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .big-loader-container .loader {
-        left: 45%;
+        left: 48%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .big-loader-container .loader {
+        left: 48%;
     }
 }
 
