--- a/src/index.css
+++ b/src/index.css
@@ -291,6 +291,12 @@
     transition: all 0.2s ease;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .star-widget label {
+        font-size: 25px;
+    }
+}
+
 /*Antd Tab*/
 .ant-tabs-tab div {
     font-size: 16px;
